--- a/PurdueDemographics/css/styleSheet.css
+++ b/PurdueDemographics/css/styleSheet.css
@@ -12,6 +12,11 @@ h2 {
 	font-size: 2em;
 }
 
+#tableauvis {
+	margin-left: auto;
+	margin-right: auto;
+}
+
 #navbar {
 	display: block;
 	font-family: Arial, Helvetica, sans-serif;
@@ -20,11 +25,14 @@ h2 {
 	list-style-type: none;
 	text-align: center;
 	padding: 0;
-    background-color: #3c4543;
+    	background-color: #3c4543;
+    	padding-top: -10px;
 }
 
 #navlinkspace{
 	display: inline;
+	padding-right: 50px;
+	padding-left: 50px;
 }
 
 #navlink {
@@ -33,8 +41,10 @@ h2 {
 }
 
 #currentpage {
-	color: #acd1b2;
 	display: inline;
+	color: #acd1b2;
+	padding-right: 50px;
+	padding-left: 50px;
 }
 
 #header {
