Add home page with group visualization

--- a/Project/Layout/index.html
+++ b/Project/Layout/index.html
@@ -14,6 +14,7 @@
         <div class="nav-wrapper" style="margin-left: 10px">
           <a href="#" class="brand-logo">KBT-Incorporated</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="home.html">Home</a></li>
             <li><a href="team_member.html">Team members</a></li>
             <li><a href="data_set.html">Data sets</a></li>
             <li><a href="tabeau.html">Tableau Visualization</a></li>
@@ -22,6 +23,7 @@
       </nav>
 
       <footer class="page-footer">
+          <div class="fb-comments" data-href="http://developers.facebook.com/docs/plugins/comments/" data-numposts="5" data-colorscheme="light"></div>
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
