--- a/Project/Layout/team_member.html
+++ b/Project/Layout/team_member.html
@@ -13,6 +13,7 @@
         <div class="nav-wrapper" style="margin-left: 10px">
           <a href="#" class="brand-logo">KBT-Incorporated</a>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="home.html">Home</a></li>
             <li><a href="team_member.html">Team members</a></li>
             <li><a href="data_set.html">Data sets</a></li>
             <li><a href="tabeau.html">Tableau Visualization</a></li>
