--- a/css/masterStyleSheet.css
+++ b/css/masterStyleSheet.css
@@ -51,7 +51,10 @@ body {
 }
 
 #body {
-	position: 50%;
+	/*position: 50%;*/
+	width: 50%;
+    margin: auto;
+    text-align: center;
 }
 
 #bottom{
@@ -119,6 +122,7 @@ rect {
     white-space: pre;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-align: center;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
     -webkit-text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
     -moz-text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
@@ -142,4 +146,6 @@ rect {
     font-size: 26px;
     font-weight: 200;
     text-shadow: 0 1px 0 #fff;
+    width: 50%;
+    margin: auto;
 }
