--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-.mainpage {
+/*.mainpage {
 	background-color: #512da8;
-	text-align: center;
-}
-body {
+/*	text-align: center;
+*/}
+/*body {
 	padding: 0;
 	margin: 0;
 	text-align: center;
@@ -14,4 +14,4 @@ body {
     flex: 1 0 auto;
     text-align: center;
 
-  }
+  }*/
