--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 .mainpage {
-	background-color: #512da8;
+	/*background-color: #512da8;*/
 	text-align: center;
 }
+
 body {
 	padding: 0;
 	margin: 0;
@@ -9,9 +10,114 @@ body {
 	display: flex;
     min-height: 100vh;
     flex-direction: column;
+    background-color: #b7d1c4;
+    font-size: 12px;
+    overflow: scroll;
 }
+
 .main {
-    flex: 1 0 auto;
+    flex: 10 auto;
     text-align: center;
 
   }
+
+/*body {
+    overflow: hidden;
+    margin: auto;
+    font-size: 12px;
+    font-family: "Helvetica Neue", Helvetica;
+    background-color: #b7d1c4;
+    overflow: scroll;
+    /*overflow-y: scroll;*/
+    /*overflow-x: scroll;
+}*/
+
+#treemap {
+    /*overflow: hidden;
+    overflow-y: hidden;
+    overflow-x: hidden;*/
+    /*position: relative;*/
+    width: 50%;
+    margin: auto;
+    text-align: center;
+    /*float: left;*/
+}
+
+#heatmap {
+    /*overflow: hidden;
+    overflow-y: hidden;
+    overflow-x: hidden;*/
+    /*position: relative;*/
+    width: 55%;
+    margin: auto;
+    text-align: center;
+    /*float: left;*/
+}
+
+svg {
+    overflow: hidden;
+}
+
+rect {
+    overflow: hidden;
+    pointer-events: all;
+    cursor: pointer;
+    stroke: #EEEEEE;
+}
+
+.chart {
+    display: block;
+    margin: auto;
+}
+
+.parent .label {
+    color: #FFFFFF;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+    -webkit-text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+    -moz-text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+}
+
+.labelbody {
+    background: transparent;
+}
+
+.label {
+    margin: 2px;
+    white-space: pre;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+    text-align: center;    
+    -webkit-text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+    -moz-text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+}
+
+.child .label {
+    white-space: pre-wrap;
+    text-align: center;
+    text-overflow: ellipsis;
+}
+
+.cell {
+    font-size: 11px;
+    cursor: pointer
+}
+
+rect.bordered {
+    stroke: #E6E6E6;
+    stroke-width:2px;   
+}
+
+text.mono {
+    font-size: 9pt;
+    font-family: Consolas, courier;
+    fill: #aaa;
+}
+
+text.axis-workweek {
+    fill: #000;
+}
+
+text.axis-worktime {
+    fill: #000;
+}
